--- a/app/src/main/res/layout/activity_damage.xml
+++ b/app/src/main/res/layout/activity_damage.xml
@@ -13,145 +13,152 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Stock OUT View "
+            android:text="DAMAGE "
             android:gravity="center"
             android:textStyle="bold"
             android:textSize="25dp"
             android:background="#F77F76"
             />
-        <TableLayout
-            android:layout_width="match_parent"
+
+
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="120dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp">
-
-            <TableRow
-                android:background="#ADA8A8"
-                android:padding="8dp">
-
-                <TextView
-                    android:layout_width="13dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Sr.no" />
-
-                <TextView
-                    android:layout_width="4dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:text="Supplier name"/>
+            android:layout_marginLeft="19dp"
+            android:layout_marginTop="100dp"
+            android:text="Item Scan"
+            android:textSize="15dp"
+            android:textStyle="bold" />
 
 
-
-
-
-                <TextView
-                    android:layout_width="4dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-
-                    android:text="ITEM Name"/>
-
-
-
-
-            </TableRow>
-
-            <TableRow
-                android:background="#E7EAEB"
-                android:padding="5dp">
-
-                <TextView
-                    android:layout_width="13dp"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/border_table"
-                    android:layout_weight="1" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/border_table"
-                    android:layout_weight="1"
-                    />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/border_table"
-                    android:layout_weight="1"
-                    />
-
-
-
-            </TableRow>
-
-            <TableRow
-                android:background="#E7EAEB"
-                android:padding="5dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/border_table"
-                    android:layout_weight="1"
-
-                    android:text="" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/border_table"
-                    android:layout_weight="1"
-                    android:text=" " />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/border_table"
-                    android:layout_weight="1"
-                    android:text="" />
-
-            </TableRow>
-
-            <TableRow
-                android:background="#E7EAEB"
-                android:padding="5dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/border_table"
-                    android:layout_weight="1"
-                    />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/border_table"
-                    android:layout_weight="1" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/border_table"
-                    android:layout_weight="1" />
-
-
-            </TableRow>
-        </TableLayout>
         <Button
-            android:layout_width="120dp"
+            android:layout_width="100dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:layout_marginLeft="110dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginLeft="130dp"
+
+            android:layout_marginTop="90dp"
             android:background="@drawable/border_table"
-            android:text="DAMAGE">
+            android:gravity="center"
+            android:text="Scan">
 
 
         </Button>
+
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_marginTop="170dp">
+
+            <TableRow
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:paddingTop="13dp">
+
+                <TextView
+                    android:id="@+id/damage_itmname"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="ITEM name :"
+                    android:textSize="15dp"
+
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/damage_itmnameET"
+                    android:layout_width="249dp"
+                    android:layout_height="25dp"
+                    android:layout_marginRight="5dp"
+                    android:background="@drawable/border_table"
+                    android:hint=""
+                    android:textSize="15dp"
+
+
+                    />
+
+
+            </TableRow>
+
+            <TableRow
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:paddingTop="13dp">
+
+                <TextView
+                    android:id="@+id/damage_modelno"
+                    android:layout_width="match_parent"
+                    android:layout_height="25dp"
+
+                    android:text="Model no:"
+                    android:textSize="15dp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/damage_modelnoET"
+                    android:layout_width="match_parent"
+                    android:layout_height="25dp"
+
+                    android:background="@drawable/border_table"
+                    android:hint=""
+                    android:textSize="15dp" />
+
+            </TableRow>
+
+            <TableRow
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:paddingTop="13dp">
+
+                <TextView
+                    android:id="@+id/damage_date"
+                    android:layout_width="match_parent"
+                    android:layout_height="25dp"
+                    android:text="Date :"
+
+                    android:textSize="15dp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/damage_dateET"
+                    android:layout_width="match_parent"
+                    android:layout_height="25dp"
+
+                    android:background="@drawable/border_table"
+
+                    android:inputType="number"
+
+                    android:textSize="15dp" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:paddingTop="13dp">
+
+                <TextView
+                    android:id="@+id/damage_cusname"
+                    android:layout_width="match_parent"
+                    android:layout_height="25dp"
+
+                    android:text="Customer name:"
+                    android:textSize="15dp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/damage_cusnameET"
+                    android:layout_width="match_parent"
+                    android:layout_height="25dp"
+                    android:background="@drawable/border_table"
+
+                    android:inputType="number"
+
+                    android:textSize="15dp" />
+            </TableRow>
+
+
+
+
+        </TableLayout>
 
     </RelativeLayout>
 
