--- a/app/src/main/res/layout/activity_stock_in.xml
+++ b/app/src/main/res/layout/activity_stock_in.xml
@@ -100,80 +100,9 @@
 
             </TableRow>
 
-            <TableRow
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:paddingTop="13dp">
 
-                <TextView
-                    android:id="@+id/additem_modelno"
-                    android:layout_width="match_parent"
-                    android:layout_height="25dp"
-                    android:text="Model no :"
 
-                    android:textSize="15dp"
-                    android:textStyle="bold" />
 
-                <EditText
-                    android:id="@+id/additem_modelnoET"
-                    android:layout_width="match_parent"
-                    android:layout_height="25dp"
-
-                    android:background="@drawable/border_table"
-                    android:hint="Enter model no"
-                    android:inputType="number"
-
-                    android:textSize="15dp" />
-            </TableRow>
-            <TableRow
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:paddingTop="13dp">
-
-                <TextView
-                    android:id="@+id/additem_serialno"
-                    android:layout_width="match_parent"
-                    android:layout_height="25dp"
-                    android:text="Serial no:"
-
-                    android:textSize="15dp"
-                    android:textStyle="bold" />
-
-                <EditText
-                    android:id="@+id/additem_serialnoET"
-                    android:layout_width="match_parent"
-                    android:layout_height="25dp"
-
-                    android:background="@drawable/border_table"
-                    android:hint="Enter serial no"
-                    android:inputType="number"
-
-                    android:textSize="15dp" />
-            </TableRow>
-            <TableRow
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:paddingTop="13dp">
-
-                <TextView
-                    android:id="@+id/additem_storageLoca"
-                    android:layout_width="match_parent"
-                    android:layout_height="25dp"
-                    android:text="Storage Location:"
-
-                    android:textSize="15dp"
-                    android:textStyle="bold" />
-
-                <EditText
-                    android:id="@+id/additem_storageLocaET"
-                    android:layout_width="match_parent"
-                    android:layout_height="25dp"
-
-                    android:background="@drawable/border_table"
-                    android:hint="Enter storage location"
-
-                    android:textSize="15dp" />
-            </TableRow>
             <TableRow
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -250,6 +179,30 @@
                     android:textSize="15dp" />
             </TableRow>
 
+            <TableRow
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:paddingTop="13dp">
+
+                <TextView
+                    android:id="@+id/additem_storageLoca"
+                    android:layout_width="match_parent"
+                    android:layout_height="25dp"
+                    android:text="Storage Location:"
+
+                    android:textSize="15dp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/additem_storageLocaET"
+                    android:layout_width="match_parent"
+                    android:layout_height="25dp"
+
+                    android:background="@drawable/border_table"
+                    android:hint="Enter storage location"
+
+                    android:textSize="15dp" />
+            </TableRow>
             <TableRow
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -347,12 +300,12 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/additem_proaddET"
+                    android:id="@+id/additem_quantityET"
                     android:layout_width="wrap_content"
                     android:layout_height="25dp"
                     android:layout_marginRight="5dp"
                     android:background="@drawable/border_table"
-                    android:hint="Enter quantity"
+                    android:hint="Enter quantity In "
                     android:textSize="15dp"
 
 
@@ -427,8 +380,8 @@
             android:id="@+id/additem_opnbtn"
             android:layout_width="90dp"
             android:layout_height="32dp"
-            android:layout_marginLeft="130dp"
-            android:layout_marginTop="650dp"
+            android:layout_marginLeft="150dp"
+            android:layout_marginTop="590dp"
             android:onClick="openStockInPage"
             android:text="Open page"
             android:textSize="10dp" />
@@ -440,7 +393,7 @@
             android:layout_height="30dp"
             android:layout_marginLeft="313dp"
             android:id="@+id/additem_imgbtn"
-            android:layout_marginTop="670dp"
+            android:layout_marginTop="590dp"
             android:onClick="addStockIn"
             android:src="@drawable/plus_button" />
 
@@ -449,7 +402,7 @@
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="130dp"
-            android:layout_marginTop="680dp"
+            android:layout_marginTop="650dp"
             android:gravity="center"
             android:text="Submit" />
 
