--- a/app/src/main/res/layout/activity_damage.xml
+++ b/app/src/main/res/layout/activity_damage.xml
@@ -27,7 +27,7 @@
             android:layout_marginLeft="19dp"
             android:layout_marginTop="100dp"
             android:text="Item Scan"
-            android:textSize="15dp"
+            android:textSize="19dp"
             android:textStyle="bold" />
 
 
@@ -37,7 +37,7 @@
             android:layout_marginLeft="130dp"
 
             android:layout_marginTop="90dp"
-            android:background="@drawable/border_table"
+
             android:gravity="center"
             android:text="Scan">
 
@@ -45,14 +45,45 @@
         </Button>
 
         <TableLayout
-            android:layout_width="match_parent"
+            android:layout_width="350dp"
             android:layout_height="match_parent"
-            android:gravity="center"
-            android:layout_marginTop="170dp">
+            android:layout_marginTop="170dp"
+            android:gravity="center">
+            <TableRow
+                android:layout_width="330dp"
+                android:layout_height="35dp"
+
+                android:paddingTop="13dp">
+
+                <TextView
+                    android:id="@+id/damage_reson"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Reason:"
+                    android:textSize="15dp"
+
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/damage_resonET"
+                    android:layout_width="200dp"
+                    android:layout_height="25dp"
+                    android:layout_marginRight="5dp"
+                    android:gravity="center"
+                    android:background="@drawable/border_table"
+                    android:hint="Enter reason for damage"
+                    android:textSize="15dp"
+
+
+                    />
+
+
+            </TableRow>
 
             <TableRow
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_width="330dp"
+                android:layout_height="35dp"
+
                 android:paddingTop="13dp">
 
                 <TextView
@@ -66,9 +97,10 @@
 
                 <EditText
                     android:id="@+id/damage_itmnameET"
-                    android:layout_width="249dp"
+                    android:layout_width="200dp"
                     android:layout_height="25dp"
                     android:layout_marginRight="5dp"
+                    android:gravity="center"
                     android:background="@drawable/border_table"
                     android:hint=""
                     android:textSize="15dp"
@@ -81,7 +113,7 @@
 
             <TableRow
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
+                android:layout_height="35dp"
                 android:paddingTop="13dp">
 
                 <TextView
@@ -95,8 +127,34 @@
 
                 <EditText
                     android:id="@+id/damage_modelnoET"
+                    android:layout_width="200dp"
+                    android:layout_height="25dp"
+                    android:gravity="center"
+
+                    android:background="@drawable/border_table"
+                    android:hint=""
+                    android:textSize="15dp" />
+
+            </TableRow>
+            <TableRow
+                android:layout_width="fill_parent"
+                android:layout_height="35dp"
+                android:paddingTop="13dp">
+
+                <TextView
+                    android:id="@+id/damage_billno"
                     android:layout_width="match_parent"
                     android:layout_height="25dp"
+
+                    android:text="Bill no:"
+                    android:textSize="15dp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/damage_billnoET"
+                    android:layout_width="200dp"
+                    android:layout_height="25dp"
+                    android:gravity="center"
 
                     android:background="@drawable/border_table"
                     android:hint=""
@@ -104,9 +162,10 @@
 
             </TableRow>
 
+
             <TableRow
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
+                android:layout_height="35dp"
                 android:paddingTop="13dp">
 
                 <TextView
@@ -120,8 +179,9 @@
 
                 <EditText
                     android:id="@+id/damage_dateET"
-                    android:layout_width="match_parent"
+                    android:layout_width="200dp"
                     android:layout_height="25dp"
+                    android:gravity="center"
 
                     android:background="@drawable/border_table"
 
@@ -131,14 +191,14 @@
             </TableRow>
 
             <TableRow
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
                 android:paddingTop="13dp">
 
                 <TextView
                     android:id="@+id/damage_cusname"
-                    android:layout_width="match_parent"
-                    android:layout_height="25dp"
+                    android:layout_width="100dp"
+                    android:layout_height="38dp"
 
                     android:text="Customer name:"
                     android:textSize="15dp"
@@ -146,19 +206,50 @@
 
                 <EditText
                     android:id="@+id/damage_cusnameET"
-                    android:layout_width="match_parent"
+                    android:layout_width="200dp"
                     android:layout_height="25dp"
                     android:background="@drawable/border_table"
 
-                    android:inputType="number"
 
+
+                    android:textSize="14dp" />
+            </TableRow>
+            <TableRow
+                android:layout_width="fill_parent"
+                android:layout_height="35dp"
+                android:paddingTop="10dp">
+
+                <TextView
+
+                    android:layout_width="100dp"
+                    android:layout_height="38dp"
+                    android:id="@+id/damage_storeLoc"
+                    android:text="Storage Location:"
+                    android:textSize="15dp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/damage_storeLocET"
+                    android:layout_width="match_parent"
+                    android:layout_height="25dp"
+                    android:background="@drawable/border_table"
                     android:textSize="15dp" />
             </TableRow>
 
 
 
-
         </TableLayout>
+        <Button
+            android:id="@+id/damage_subtn"
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+
+            android:layout_marginLeft="130dp"
+            android:layout_marginTop="490dp"
+            android:textSize="15dp"
+            android:hint="Submit"
+            />
+
 
     </RelativeLayout>
 
