--- a/app/src/main/res/layout/activity_add__item.xml
+++ b/app/src/main/res/layout/activity_add__item.xml
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView2"
         android:layout_below="@+id/textView2"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="200dp"
         android:textStyle="bold"
         android:textSize="15dp"
         android:layout_marginLeft="10dp"
@@ -44,72 +44,78 @@
         android:hint="Enter model no."
         android:textSize="15dp"
         android:background="@drawable/border_table"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="200dp"
         android:layout_marginLeft="130dp"/>
-        <TextView
-            android:id="@+id/category"
-            android:layout_width="90dp"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/textView2"
-            android:layout_marginLeft="10dp"
-            android:textSize="15dp"
-            android:layout_below="@+id/textView2"
-            android:layout_marginTop="590dp"
-            android:text="ITEM Category:"
-            android:textStyle="bold"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
-        <Spinner
-            android:id="@+id/category_spinner"
-            android:layout_width="220dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="590dp"
 
-            android:entries="@array/select"
-            android:layout_marginLeft="120dp"></Spinner>
+
 
 
         <TextView
-        android:id="@+id/serialno"
+        android:id="@+id/additem_don"
         android:layout_width="90dp"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView2"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="220dp"
+        android:layout_marginTop="300dp"
         android:textSize="15dp"
         android:textStyle="bold"
         android:layout_marginLeft="10dp"
-        android:text="Serial no:"
+        android:text="DOM:"
         android:textAppearance="?android:attr/textAppearanceMedium"
        />
 
     <EditText
-        android:id="@+id/serialnoEditText"
+        android:id="@+id/additem_DON"
         android:layout_width="match_parent"
         android:layout_height="32dp"
         android:layout_below="@+id/textView2"
         android:layout_marginLeft="130dp"
-        android:layout_marginTop="220dp"
+        android:layout_marginTop="300dp"
         android:textSize="15dp"
         android:background="@drawable/border_table"
-        android:hint="Enter serial no."/>
+        android:hint="Enter office no."/>
+        <TextView
+            android:id="@+id/serialno"
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/textView2"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="250dp"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            android:layout_marginLeft="10dp"
+            android:text="Serial no:"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            />
+
+        <EditText
+            android:id="@+id/serialnoEditText"
+            android:layout_width="match_parent"
+            android:layout_height="32dp"
+            android:layout_below="@+id/textView2"
+            android:layout_marginLeft="130dp"
+            android:layout_marginTop="250dp"
+            android:textSize="15dp"
+            android:background="@drawable/border_table"
+            android:hint="Enter serial no."/>
     <TextView
         android:layout_width="90dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="280dp"
-        android:text="Specification"
+        android:layout_marginTop="350dp"
+        android:text="Barcode Generator"
         android:textStyle="bold"
         android:id="@+id/specification"
         android:layout_marginLeft="10dp"/>
-    <EditText
-        android:id="@+id/specificationEditText"
-        android:layout_width="250dp"
-        android:layout_height="100dp"
+    <Button
+        android:id="@+id/additem_genbtn"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
         android:layout_below="@+id/textView2"
         android:layout_marginLeft="130dp"
-        android:layout_marginTop="280dp"
+        android:layout_marginTop="350dp"
         android:textSize="15dp"
-        android:hint="Enter specification."
-        android:background="@drawable/border_table"/>
+        android:hint="Generator"
+       />
 
     <TextView
         android:id="@+id/supplier"
@@ -118,7 +124,7 @@
         android:layout_marginLeft="10dp"
         android:layout_alignLeft="@+id/textView2"
         android:layout_below="@+id/textView2"
-        android:layout_marginTop="400dp"
+        android:layout_marginTop="413dp"
         android:textSize="15dp"
         android:text="Supplier name:"
         android:textStyle="bold"
@@ -130,11 +136,30 @@
         android:layout_height="32dp"
         android:layout_below="@+id/textView2"
         android:layout_marginLeft="130dp"
-        android:layout_marginTop="400dp"
+        android:layout_marginTop="413dp"
         android:textSize="15dp"
         android:background="@drawable/border_table"
         android:hint="Enter supplier name"/>
+        <TextView
+            android:id="@+id/category"
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/textView2"
+            android:layout_marginLeft="10dp"
+            android:textSize="15dp"
+            android:layout_below="@+id/textView2"
+            android:layout_marginTop="90dp"
+            android:text="ITEM Category:"
+            android:textStyle="bold"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+        <Spinner
+            android:id="@+id/category_spinner"
+            android:layout_width="220dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="90dp"
 
+           android:entries="@array/select"
+            android:layout_marginLeft="120dp"></Spinner>
     <TextView
         android:id="@+id/itemname"
         android:layout_width="wrap_content"
@@ -142,7 +167,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView2"
         android:layout_below="@+id/textView2"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="150dp"
         android:textSize="15dp"
         android:text="ITEM Name:"
         android:textStyle="bold"
@@ -155,7 +180,7 @@
             android:layout_below="@+id/textView2"
             android:layout_marginLeft="130dp"
             android:textSize="15dp"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="150dp"
 
             android:background="@drawable/border_table"
             android:hint="Enter name" />
@@ -183,29 +208,6 @@
         android:background="@drawable/border_table"
         android:hint="Enter mobile no."
          />
-    <TextView
-        android:id="@+id/storagelocation"
-        android:layout_width="90dp"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView2"
-        android:layout_marginLeft="10dp"
-        android:layout_below="@+id/textView2"
-        android:layout_marginTop="530dp"
-        android:textSize="15dp"
-        android:text="Strorage Location:"
-        android:textStyle="bold"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <EditText
-        android:id="@+id/storagelocationEditText"
-        android:layout_width="274dp"
-        android:layout_height="32dp"
-        android:layout_below="@+id/textView2"
-        android:layout_marginLeft="130dp"
-        android:layout_marginTop="530dp"
-        android:textSize="15dp"
-        android:background="@drawable/border_table"
-        android:hint="Enter Location" />
 
 
     <Button
@@ -213,7 +215,7 @@
         android:layout_width="210dp"
         android:layout_height="37dp"
         android:layout_marginLeft="90dp"
-        android:layout_marginTop="650dp"
+        android:layout_marginTop="550dp"
 
         android:gravity="center"
         android:text="SUBMIT "
