--- a/app/src/main/res/layout/activity_reject.xml
+++ b/app/src/main/res/layout/activity_reject.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Reject">
+    tools:context=".Services.StockOut.Reject">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -17,44 +20,80 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="26dp"
+        android:layout_marginLeft="30dp"
         android:layout_marginTop="100dp"
-        android:text="Item Scan"
+        android:text="Item Scan:"
         android:textSize="15dp"
         android:textStyle="bold" />
 
 
     <Button
-        android:layout_width="190dp"
+        android:layout_width="140dp"
         android:layout_height="45dp"
-        android:layout_marginLeft="140dp"
+        android:layout_marginLeft="120dp"
 
         android:layout_marginTop="90dp"
-        android:background="@drawable/border_table"
+
         android:gravity="center"
         android:text="Scan">
 
 
     </Button>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="26dp"
-        android:layout_marginTop="200dp"
-        android:text="ADD to StockIN"
-        android:textSize="15dp"
-        android:textStyle="bold" />
+    <TableLayout
+        android:layout_width="400dp"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="10dp"
+        android:gravity="center"
+        android:layout_marginTop="90dp"
+        android:paddingTop="0dp">
+
+        <TableRow
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:paddingTop="12dp">
+
+            <TextView
+                android:id="@+id/damage_itmname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="90dp"
+                android:layout_marginRight="25dp"
+                android:layout_marginLeft="15dp"
+                android:text="Reason :"
+                android:textSize="15dp"
+
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/damage_resnET"
+                android:layout_width="200dp"
+                android:layout_height="25dp"
+                android:layout_marginTop="90dp"
+                android:layout_marginRight="5dp"
+                android:background="@drawable/border_table"
+                android:hint="Enter reason for reject"
+                android:textSize="15dp"
+
+
+                />
+
+
+        </TableRow>
+    </TableLayout>
+
 
 
     <Button
-        android:layout_width="190dp"
-        android:layout_height="45dp"
-        android:layout_marginLeft="140dp"
+        android:layout_width="250dp"
+        android:layout_height="42dp"
+        android:layout_marginLeft="70dp"
 
-        android:layout_marginTop="190dp"
-        android:background="@drawable/border_table"
+        android:layout_marginTop="280dp"
+
         android:gravity="center"
-        android:text="ADD"/>
+        android:text="ADD to Stock-IN"/>
+    </RelativeLayout>
 
 
-</RelativeLayout>
+
+</ScrollView>
