--- a/app/src/main/res/layout/activity_repaire.xml
+++ b/app/src/main/res/layout/activity_repaire.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Repaire">
+    tools:context=".Services.StockOut.Repaire">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -26,11 +29,11 @@
 
     <Button
         android:layout_width="100dp"
-        android:layout_height="45"
+        android:layout_height="45dp"
         android:layout_marginLeft="130dp"
         android:id="@+id/repair_scnbtn"
         android:layout_marginTop="90dp"
-        android:background="@drawable/border_table"
+
         android:gravity="center"
         android:text="Scan">
 
@@ -41,37 +44,71 @@
         android:layout_height="match_parent"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
+        android:layout_marginTop="00dp"
+
         android:orientation="horizontal">
 
     <Button
-        android:layout_width="180dp"
+        android:layout_width="150dp"
         android:layout_height="45dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="25dp"
 
-        android:layout_marginTop="190dp"
+        android:layout_marginTop="180dp"
         android:background="@drawable/border_table"
 
         android:text="ADD StockIN" />
         <Button
-            android:layout_width="180dp"
+            android:layout_width="150dp"
             android:layout_height="45dp"
             android:layout_marginLeft="10dp"
-
-            android:layout_marginTop="190dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="180dp"
             android:background="@drawable/border_table"
 
             android:text="Go to customoer" />
 
     </LinearLayout>
+
     <TableLayout
-        android:layout_width="match_parent"
+        android:layout_width="400dp"
         android:layout_height="match_parent"
+        android:layout_marginLeft="10dp"
         android:gravity="center"
-        android:layout_marginLeft="10dp">
+        android:layout_marginTop="150dp"
+        android:paddingTop="100dp">
+        <TableRow
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:paddingTop="13dp">
+
+            <TextView
+                android:id="@+id/damage_resn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Reason:"
+                android:textSize="15dp"
+
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/damage_resnET"
+                android:layout_width="200dp"
+                android:layout_height="25dp"
+                android:layout_marginRight="5dp"
+                android:background="@drawable/border_table"
+                android:hint="Enter reason for repair"
+                android:textSize="15dp"
+
+
+                />
+
+
+        </TableRow>
+
 
         <TableRow
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="35dp"
             android:paddingTop="13dp">
 
             <TextView
@@ -85,7 +122,7 @@
 
             <EditText
                 android:id="@+id/damage_itmnameET"
-                android:layout_width="249dp"
+                android:layout_width="200dp"
                 android:layout_height="25dp"
                 android:layout_marginRight="5dp"
                 android:background="@drawable/border_table"
@@ -98,9 +135,10 @@
 
         </TableRow>
 
+
         <TableRow
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_height="35dp"
             android:paddingTop="13dp">
 
             <TextView
@@ -122,10 +160,36 @@
                 android:textSize="15dp" />
 
         </TableRow>
+        <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="35dp"
+            android:paddingTop="13dp">
+
+            <TextView
+                android:id="@+id/repair_billno"
+                android:layout_width="match_parent"
+                android:layout_height="25dp"
+
+                android:text="Bill no:"
+                android:textSize="15dp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/repair_billnoET"
+                android:layout_width="200dp"
+                android:layout_height="25dp"
+                android:gravity="center"
+
+                android:background="@drawable/border_table"
+                android:hint=""
+                android:textSize="15dp" />
+
+        </TableRow>
+
 
         <TableRow
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_height="35dp"
             android:paddingTop="13dp">
 
             <TextView
@@ -149,17 +213,17 @@
                 android:textSize="15dp" />
         </TableRow>
 
-        <TableRow
+                      <TableRow
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:paddingTop="13dp">
+            android:layout_height="35dp"
+            android:paddingTop="15dp">
 
             <TextView
                 android:id="@+id/damage_cusname"
-                android:layout_width="match_parent"
-                android:layout_height="25dp"
+                android:layout_width="100dp"
+                android:layout_height="38dp"
 
-                android:text="Customer name:"
+                android:text="Customer name :"
                 android:textSize="15dp"
                 android:textStyle="bold" />
 
@@ -169,17 +233,45 @@
                 android:layout_height="25dp"
                 android:background="@drawable/border_table"
 
-                android:inputType="number"
+                android:textSize="15dp" />
+        </TableRow>
+        <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="35dp"
+            android:paddingTop="10dp">
 
+            <TextView
+
+                android:layout_width="100dp"
+                android:layout_height="38dp"
+                android:id="@+id/repair_storeLoc"
+                android:text="Storage Location:"
+                android:textSize="15dp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/repair_storeLocET"
+                android:layout_width="match_parent"
+                android:layout_height="25dp"
+                android:background="@drawable/border_table"
                 android:textSize="15dp" />
         </TableRow>
 
 
 
-
     </TableLayout>
+    <Button
+        android:layout_width="180dp"
+        android:layout_height="45dp"
+        android:layout_marginLeft="100dp"
+        android:text="Submit"
+        android:id="@+id/repair_subbtn"
+        android:gravity="center"
+        android:layout_marginTop="550dp"/>
 
 
 
 
-</RelativeLayout>
+    </RelativeLayout>
+
+</ScrollView>
