--- a/app/src/main/res/layout/activity_stock_in.xml
+++ b/app/src/main/res/layout/activity_stock_in.xml
@@ -92,13 +92,39 @@
                 <EditText
                     android:id="@+id/additem_nameET"
                     android:layout_width="match_parent"
-                    android:layout_height="25dp"
+                    android:layout_height="28dp"
 
                     android:background="@drawable/border_table"
                     android:hint="Enter supplier uniq ID"
                     android:textSize="15dp" />
 
             </TableRow>
+            <TableRow
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:paddingTop="13dp">
+
+                <TextView
+                    android:id="@+id/additem_modelno"
+                    android:layout_width="match_parent"
+                    android:layout_height="25dp"
+
+                    android:text="Model no:"
+                    android:textSize="15dp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/additem_modelnoET"
+                    android:layout_width="match_parent"
+                    android:layout_height="28dp"
+
+                    android:background="@drawable/border_table"
+                    android:hint="Enter model no"
+                    android:textSize="15dp" />
+
+            </TableRow>
+
+
 
 
 
@@ -109,21 +135,21 @@
                 android:paddingTop="13dp">
 
                 <TextView
-                    android:id="@+id/additem_suppID"
+                    android:id="@+id/add_item_storgloc"
                     android:layout_width="match_parent"
                     android:layout_height="25dp"
-                    android:text="Supplier ID:"
+                    android:text="Storage Location:"
 
                     android:textSize="15dp"
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/additem_suppIDET"
+                    android:id="@+id/additem_storageLocaET"
                     android:layout_width="match_parent"
-                    android:layout_height="25dp"
+                    android:layout_height="28dp"
 
                     android:background="@drawable/border_table"
-                    android:hint="Enter Supplier ID"
+                    android:hint="Enter storage location"
 
 
                     android:textSize="15dp" />
@@ -145,7 +171,7 @@
                 <EditText
                     android:id="@+id/additem_dateET"
                     android:layout_width="match_parent"
-                    android:layout_height="25dp"
+                    android:layout_height="28dp"
 
                     android:background="@drawable/border_table"
                     android:hint="Enter date"
@@ -171,7 +197,7 @@
                 <EditText
                     android:id="@+id/additem_billnoET"
                     android:layout_width="match_parent"
-                    android:layout_height="25dp"
+                    android:layout_height="28dp"
                     android:background="@drawable/border_table"
                     android:hint="Enter bill no. "
                     android:inputType="number"
@@ -188,18 +214,18 @@
                     android:id="@+id/additem_storageLoca"
                     android:layout_width="match_parent"
                     android:layout_height="25dp"
-                    android:text="Storage Location:"
+                    android:text="Supplier ID"
 
                     android:textSize="15dp"
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/additem_storageLocaET"
+                    android:id="@+id/additem_suppID"
                     android:layout_width="match_parent"
-                    android:layout_height="25dp"
+                    android:layout_height="28dp"
 
                     android:background="@drawable/border_table"
-                    android:hint="Enter storage location"
+                    android:hint="Enter Supplier ID"
 
                     android:textSize="15dp" />
             </TableRow>
@@ -220,7 +246,7 @@
                 <EditText
                     android:id="@+id/additem_snameET"
                     android:layout_width="match_parent"
-                    android:layout_height="25dp"
+                    android:layout_height="28dp"
                     android:background="@drawable/border_table"
 
                     android:hint="Enter Suppliername "
@@ -245,7 +271,7 @@
                 <EditText
                     android:id="@+id/additem_conoET"
                     android:layout_width="match_parent"
-                    android:layout_height="25dp"
+                    android:layout_height="28dp"
                     android:width="100px"
                     android:inputType="number"
                     android:background="@drawable/border_table"
@@ -273,7 +299,7 @@
                 <EditText
                     android:id="@+id/additem_addET"
                     android:layout_width="wrap_content"
-                    android:layout_height="25dp"
+                    android:layout_height="28dp"
                     android:layout_marginRight="5dp"
                     android:background="@drawable/border_table"
                     android:hint="Enter address"
@@ -285,34 +311,7 @@
 
 
 
-            <TableRow
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:paddingTop="13dp">
 
-                <TextView
-                    android:id="@+id/itemname"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="No. of product add:"
-                    android:textSize="15dp"
-
-                    android:textStyle="bold" />
-
-                <EditText
-                    android:id="@+id/additem_quantityET"
-                    android:layout_width="wrap_content"
-                    android:layout_height="25dp"
-                    android:layout_marginRight="5dp"
-                    android:background="@drawable/border_table"
-                    android:hint="Enter quantity In "
-                    android:textSize="15dp"
-
-
-                    />
-
-
-            </TableRow>
 
             <TableRow
                 android:layout_width="wrap_content"
@@ -331,7 +330,7 @@
                 <EditText
                     android:id="@+id/additem_availbleET"
                     android:layout_width="wrap_content"
-                    android:layout_height="25dp"
+                    android:layout_height="28dp"
                     android:layout_marginRight="5dp"
                     android:background="@drawable/border_table"
                     android:hint=""
@@ -353,7 +352,7 @@
                     android:id="@+id/load"
                     android:layout_width="60dp"
                     android:layout_height="wrap_content"
-                    android:text="Open Page:"
+                    android:text="Open Page for edit:"
                     android:textSize="15dp"
 
                     android:textStyle="bold" />
@@ -361,11 +360,11 @@
                 <EditText
                     android:id="@+id/additem_opnpgET"
                     android:layout_width="match_parent"
-                    android:layout_height="25dp"
+                    android:layout_height="28dp"
                     android:layout_marginRight="5dp"
                     android:textSize="15dp"
                     android:background="@drawable/border_table"
-                    android:hint="Enter page no."
+                    android:hint="Enter supplier id."
                     android:inputType="number" />
 
 
@@ -381,7 +380,7 @@
             android:layout_width="90dp"
             android:layout_height="32dp"
             android:layout_marginLeft="150dp"
-            android:layout_marginTop="590dp"
+            android:layout_marginTop="610dp"
             android:onClick="openStockInPage"
             android:text="Open page"
             android:textSize="10dp" />
@@ -393,7 +392,7 @@
             android:layout_height="30dp"
             android:layout_marginLeft="313dp"
             android:id="@+id/additem_imgbtn"
-            android:layout_marginTop="590dp"
+            android:layout_marginTop="610dp"
             android:onClick="addStockIn"
             android:src="@drawable/plus_button" />
 
